Class Changes Complete + newer classes added

--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -2,7 +2,7 @@
  * @name Bubble Theme v3
  * @author ShadowDevilsAvenged
  * @description Bubbles, Bubbles and more Bubbles.
- * @version 3
+ * @version 3.1
  */
 
  .app-2CXKsg {
@@ -441,7 +441,7 @@
     border-radius: 50px;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     border-radius: 50px;
     color: white;
     background-color: transparent;
@@ -450,7 +450,7 @@
     border: none;
 }
 
-.input-2g-os5.focused-1AtTHC, .input-2g-os5:focus {
+.input-3O04eu.focused-16iuXg, .input-3O04eu:focus {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.43), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
     background-image: radial-gradient(circle closest-side at 135px 135px, rgba(255, 255, 255, .65) 10%, rgba(241, 196, 15, 0.29) 100%, rgba(241, 196, 15, 0.29) 100%);
 }
@@ -1071,7 +1071,7 @@
     border-radius: 50px;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color: var(--control-brand-foreground); background-color: var(--control-brand-foreground);"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color: var(--control-brand-foreground); background-color: var(--control-brand-foreground);"] {
     border: none;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33) !important;
     background-image: radial-gradient(circle closest-side at 6px 6px, rgba(255, 255, 255, .65) 10%, rgba(42, 1, 155, 0.49) 100%, rgba(42, 1, 155, 0.49) 100%) !important;
@@ -1522,35 +1522,35 @@
     display: none;
 }
 
-.h5-2RwDNl {
+.h5-2feg8J {
     color: white;
     font-size: 14px;
 }
 
-.h4-1_f8j1, .h5-2RwDNl {
+.h4-1_f8j1, .h5-2feg8J {
     text-transform: capitalize;
 }
 
-.select-1Ia3hD {
+.select-Zz0IcO {
     border-radius: 50px;
 }
 
-.select-1Ia3hD, .wrapper-1b33hy {
+.select-Zz0IcO, .wrapper-mJT04A {
     color: white;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.59) 100%, rgba(0, 0, 0, 0.59) 100%);
     border-color: transparent;
 }
 
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: white;
 }
 
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: none;
     background: none;
     border-radius: 30px;
@@ -1567,18 +1567,18 @@
     opacity: .8;
 }
 
-.option-2eIyOn {
+.option-Uc12mm {
     color: white;
 }
 
-.option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true] {
     border-radius: 30px;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53) !important;
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(148, 149, 165, 0.59) 100%, rgba(148, 149, 165, 0.59) 100%) !important;
     color: white;
 }
 
-.option-2eIyOn.focused-ODgjnC, .option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, .option-Uc12mm:focus, .option-Uc12mm:hover {
     border-radius: 30px;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(92, 92, 91, 0.59) 100%, rgba(92, 92, 91, 0.59) 100%);
@@ -1593,47 +1593,47 @@
     border-color: transparent;
 }
 
-.container-2nx-BQ, .bd-switch-body {
+.container-1QtPKm, .bd-switch-body {
     position: relative;
     width: 40px;
     height: 40px;
 }
 
-.container-2nx-BQ, .input-2XRLou, .bd-switch-body {
+.container-1QtPKm, .input-125oad, .bd-switch-body {
     border-radius: 50pc;
 }
 
-.slider-32CRPX, .bd-switch-body .bd-switch-slider {
+.slider-HJFN2i, .bd-switch-body .bd-switch-slider {
     bottom: 4px;
     width: 25px;
     height: 25px;
     margin: 3px;
 }
 
-.container-2nx-BQ, .bd-switch-body {
+.container-1QtPKm, .bd-switch-body {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-color: transparent !important;
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(189, 30, 36, 0.59) 100%, rgba(189, 30, 36, 0.59) 100%);
 }
 
-.container-2nx-BQ:not([style*="218"]), .bd-switch input:checked+.bd-switch-body {
+.container-1QtPKm:not([style*="218"]), .bd-switch input:checked+.bd-switch-body {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(39, 166, 76, 0.59) 100%, rgba(39, 166, 76, 0.59) 100%);
 }
 
-.container-2nx-BQ .slider-32CRPX, .bd-switch-body .bd-switch-slider {
+.container-1QtPKm .slider-HJFN2i, .bd-switch-body .bd-switch-slider {
     left: 4px !important;
 }
 
-.container-2nx-BQ:not([style*="218"]) .slider-32CRPX, .bd-switch input:checked+.bd-switch-body .bd-switch-slider {
+.container-1QtPKm:not([style*="218"]) .slider-HJFN2i, .bd-switch input:checked+.bd-switch-body .bd-switch-slider {
     left: 4px !important;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR {
+.popout-15UxD6.popoutPositionTop-3Uhefd {
     border-radius: 30px 30px 0 0;
 }
 
-.selectPositionTop-1Xy1Sp.open-1FRZsK {
+.selectPositionTop-1Xy1Sp.open-LeyjhI {
     border-radius: 0 0 25px 25px;
 }
 
@@ -1642,28 +1642,28 @@
     border-radius: 50px;
 }
 
-.item-2idW98 {
+.item-1TA5qI {
     color: white;
     border-radius: 50px;
 }
 
-.item-2idW98[aria-checked=true], .item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.item-1TA5qI[aria-checked=true], .item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     color: white;
 }
 
-.itemFilled-1cPbtg {
+.itemFilled-2Fo7lr {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.59) 100%, rgba(0, 0, 0, 0.59) 100%);
 }
 
-.itemFilled-1cPbtg[aria-checked=true] {
+.itemFilled-2Fo7lr[aria-checked=true] {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(150, 206, 180, 0.59) 100%, rgba(150, 206, 180, 0.59) 100%);
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(255, 204, 92, 0.59) 100%, rgba(255, 204, 92, 0.59) 100%);
@@ -1696,11 +1696,11 @@
 }
 
 
-.description-30xx7u, .labelDescriptor-34wZ-z {
+.description-foE_WP, .labelDescriptor-2top7R {
     color: white;
 }
 
-.description-30xx7u a, .labelDescriptor-34wZ-z a, .helpText-10IgPC a {
+.description-foE_WP a, .labelDescriptor-2top7R a, .helpText-10IgPC a {
     color: gold;
 }
 
@@ -1837,7 +1837,8 @@
     color: white;
 }
 
-.warning-RBGtx2 a, .markup-eYLPri a, .body-1JxAWB a {
+.warning-RBGtx2 a, .markup-eYLPri a, .body-1JxAWB a,
+.mutedChannelsHook-3uTdkn {
     color: gold;
 }
 
@@ -2057,7 +2058,7 @@
     background-color: transparent;
 }
 
-.box-BHImcZ {
+.box-qwm0Q_ {
     border-radius: 50px;
 }
 
@@ -2087,11 +2088,11 @@
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -19px 9px -16px rgba(231, 254, 255, 0.33);
 }
 
-#app-mount .bar-1Bhnl9 {
+#app-mount .bar-2H7Q9u {
     background: #3AA8C1;
 }
 
-#app-mount .barFill-2Bh7CX {
+#app-mount .barFill-3RgCsY {
     background: #2E2D88;
 }
 
@@ -2131,11 +2132,11 @@
 }
 
 .contentTitle-3CylD3, 
-.theme-dark .markValue-2U_-UG {
+.theme-dark .markValue-21gAVC {
     color: white;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background: white;
 }
 
@@ -2389,14 +2390,14 @@
     color: white;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color: hsl(217, calc(var(--saturation-factor, 1) * 7.6%), 33.5%);"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color: hsl(217, calc(var(--saturation-factor, 1) * 7.6%), 33.5%);"] {
     border-color: transparent !important;
     background-image: radial-gradient(circle closest-side at 5px 5px, rgba(255, 255, 255, .85) 10%, rgba(0,0,0,0.49) 100%, rgba(0,0,0,0.49) 100%);
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -14px 9px -16px rgba(231, 254, 255, 0.33);
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color: hsl(217, calc(var(--saturation-factor, 1) * 7.6%), 33.5%);"] path {
+.theme-dark .checkbox-1LuCGM[style*="border-color: hsl(217, calc(var(--saturation-factor, 1) * 7.6%), 33.5%);"] path {
     fill: white;
 }
 
@@ -2639,7 +2640,8 @@
     box-shadow: none;
 }
 /* Active Post Boxes */
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 45px 30px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.59) 100%, rgba(0, 0, 0, 0.59) 100%);
@@ -2667,7 +2669,7 @@
     box-shadow: none;
 }
 /* Getting rid of the input background */
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background: none;
     box-shadow: none;
     border: none;
@@ -3926,7 +3928,7 @@
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -4047,17 +4049,17 @@
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -4085,7 +4087,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
