--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 3.9
+ * @version 4
  */
 
 /* Main Background */
@@ -287,11 +287,11 @@
     color: white;
 }
 
-.itemFilled-1cPbtg[aria-checked=true] {
+.itemFilled-2Fo7lr[aria-checked=true] {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
-.item-2idW98[aria-checked=true], .item-2idW98, .item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.item-1TA5qI[aria-checked=true], .item-1TA5qI, .item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     color: white;
 }
 
@@ -300,11 +300,11 @@
     r: 9;
 }
 
-.itemFilled-1cPbtg {
+.itemFilled-2Fo7lr {
     background-color: rgba(0,0,0,.3);
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: rgba(0,0,0,.6);
 }
 
@@ -346,31 +346,31 @@
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: transparent;
     border-color: transparent;
 }
 
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: none;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
-.option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true] {
     color: white !important;
     background-color: #1BC !important;
 }
 
-.option-2eIyOn.focused-ODgjnC, .option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, .option-Uc12mm:focus, .option-Uc12mm:hover {
     background-color: rgba(0,0,0,.2);
     color: white;
 }
 
-.option-2eIyOn {
+.option-Uc12mm {
     color: white;
 }
 
-.selectedIcon-19TbzU, .theme-dark .nowPlaying-3UpuKc .gameName-zbZetm {
+.selectedIcon-122rMx, .theme-dark .nowPlaying-3UpuKc .gameName-zbZetm {
     color: white;
 }
 
@@ -421,19 +421,19 @@
     background-color: transparent;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
     background: #2AB !important;
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
     background: #0b828d !important;
 }
 
-.theme-dark .markValue-2U_-UG, .markup-eYLPri {
+.theme-dark .markValue-21gAVC, .markup-eYLPri {
     color: white;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background-color: white;
 }
 
@@ -441,16 +441,17 @@
     background-color: rgba(0,0,0,.4);
 }
 
-.markup-eYLPri a {
+.markup-eYLPri a,
+.mutedChannelsHook-3uTdkn {
     color: #2AB;
     font-weight: bold;
 }
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
     border-color: white;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color"] {
     border-color: transparent !important;
     background-color: #2AB !important;
 }
@@ -511,13 +512,13 @@
     color: white;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     color: white;
     background-color: rgba(0,0,0,.3);
     border: 1px solid black;
 }
 
-.input-2g-os5.focused-1AtTHC, .input-2g-os5:focus {
+.input-3O04eu.focused-16iuXg, .input-3O04eu:focus {
     border-color: #2AB;
 }
 
@@ -771,35 +772,35 @@
 .detailsBlock-24pLFz {
     background-color: rgba(0,0,0,.3);
 }
-.select-1Ia3hD {
+.select-Zz0IcO {
     border-radius: 8px;
     border: none;
 }
-.open-1FRZsK {
+.open-LeyjhI {
     border-radius: 8px 8px 0 0;
 }
-.select-1Ia3hD, .wrapper-1b33hy {
+.select-Zz0IcO, .wrapper-mJT04A {
     color: white;
 }
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: rgba(0,0,0,.6);
     border-color: transparent;
 }
-.option-2eIyOn {
+.option-Uc12mm {
     color: white;
 }
-.option-2eIyOn.focused-ODgjnC, .option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, .option-Uc12mm:focus, .option-Uc12mm:hover {
     background-color: #1BC;
     color: white;
 }
-.option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true] {
     color: white;
     background-color: #2AB;
 }
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: white;
 }
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: none;
     background: rgba(0,0,0,.6);
     border-radius: 0 0 8px 8px;
@@ -1153,7 +1154,7 @@
     color: white;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color"] path {
+.theme-dark .checkbox-1LuCGM[style*="border-color"] path {
     fill: white;
 }
 
@@ -2232,19 +2233,19 @@
 }
 
 
-.container-2nx-BQ, .input-2XRLou, .bd-switch-body {
+.container-1QtPKm, .input-125oad, .bd-switch-body {
     border-radius: 6px;
 }
 
-.slider-32CRPX rect, .bd-switch-body .bd-switch-slider rect {
+.slider-HJFN2i rect, .bd-switch-body .bd-switch-slider rect {
     rx: 5;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(218, calc(var(--saturation-factor, 1) * 4.6%), 46.9%);"], .bd-switch-body {
+.container-1QtPKm[style*="background-color: hsl(218, calc(var(--saturation-factor, 1) * 4.6%), 46.9%);"], .bd-switch-body {
     background-color: #e20707 !important;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"], .bd-switch input:checked+.bd-switch-body {
+.container-1QtPKm[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"], .bd-switch input:checked+.bd-switch-body {
     background-color: #188b01 !important;
 }
 
@@ -2357,7 +2358,8 @@
     color: gold;
 }
 /* Active Post Boxes */
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: rgba(34, 170, 187, .6);
     border: 2px solid transparent;
     border-radius: 5px;
@@ -2375,7 +2377,7 @@
     box-shadow: none;
 }
 /* Getting rid of the input background */
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background-color: transparent;
     border: none;
 }
@@ -3548,7 +3550,7 @@
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -3669,17 +3671,17 @@
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -3707,7 +3709,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
