--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 1.4
+ * @version 1.5
 */
 
 .app-2CXKsg {
@@ -96,26 +96,26 @@
     background-color: transparent;
 }
 
-.h5-2RwDNl,
-.label-2bTGzo,
-.legend-1TXTJO {
+.h5-2feg8J,
+.label-7akf7-,
+.legend-3BgtI3 {
     font-size: 12px;
     color: white;
 }
 
-.divider-_0um2u {
+.divider-3nqZNm {
     width: 80%;
     margin-left: 70px;
     border-top: thin solid #95A8B0;
 }
 
-.description-30xx7u,
-.labelDescriptor-34wZ-z {
+.description-foE_WP,
+.labelDescriptor-2top7R {
     color: #e2e2e2;
 }
 
-.description-30xx7u a,
-.labelDescriptor-34wZ-z a,
+.description-foE_WP a,
+.labelDescriptor-2top7R a,
 .lookLink-15mFoz.colorLink-1Md3RZ {
     color: #D0DFFF;
 }
@@ -144,7 +144,7 @@
     background-color: transparent;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     font-size: 14px;
     border-radius: 6px;
     color: #D0DFFF;
@@ -154,12 +154,12 @@
     transition: box-shadow .5s;
 }
 
-.input-2g-os5:hover {
+.input-3O04eu:hover {
     box-shadow: 0 0 7px 0 rgba(0, 0, 0, .4);
     color: #e2e2e2;
 }
 
-.input-2g-os5:focus {
+.input-3O04eu:focus {
     box-shadow: 0 0 7px 0 black;
     color: white;
 }
@@ -172,12 +172,12 @@
     border-radius: 0 0 20px 20px;
 }
 
-.inputPrefix-1VU7MB {
+.inputPrefix-3Nqilo {
     font-size: 14px;
     color: #D0DFFF;
 }
 
-.theme-dark .inputPrefix-1VU7MB {
+.theme-dark .inputPrefix-3Nqilo {
     opacity: 1;
 }
 
@@ -347,7 +347,8 @@
     caret-color: white;
 }
 
-.markup-eYLPri a {
+.markup-eYLPri a,
+.mutedChannelsHook-3uTdkn {
     color: #D0DFFF;
 }
 
@@ -452,18 +453,18 @@
     color: #D0DFFF;
 }
 
-.select-1Ia3hD {
+.select-Zz0IcO {
     border: none;
     border-radius: 10px;
 }
 
-.select-1Ia3hD, 
-.wrapper-1b33hy {
+.select-Zz0IcO, 
+.wrapper-mJT04A {
     color: white;
     font-weight: 500;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: rgba(149, 168, 176, .5);
     border-color: #95A8B0;
 }
@@ -473,29 +474,29 @@
     color: white;
 }
 
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: none;
     background-image: linear-gradient(63deg, #4b5569 0%, #2d353f 89%);
     border-radius: 0 0 10px 10px;
 }
 
-.option-2eIyOn {
+.option-Uc12mm {
     color: #D0DFFF;
 }
 
-.option-2eIyOn.focused-ODgjnC,
-.option-2eIyOn:focus,
-.option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-,
+.option-Uc12mm:focus,
+.option-Uc12mm:hover {
     background-color: rgba(0, 0, 0, .05);
     color: #e2e2e2;
 }
 
-.option-2eIyOn[aria-selected=true]:not(.option-2eIyOn.multi-1HXDiv) {
+.option-Uc12mm[aria-selected=true]:not(.option-Uc12mm.multi-2vPqc4) {
     color: white !important;
     background-color: #4B5569 !important;
 }
 
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: #95A8B0;
 }
 
@@ -560,7 +561,7 @@
     background-color: black;
 }
 
-.open-1FRZsK {
+.open-LeyjhI {
     border-radius: 10px 10px 0 0;
     border-bottom-color: transparent;
 }
@@ -643,54 +644,54 @@
     border-radius: 10px;
 }
 
-.itemFilled-1cPbtg {
+.itemFilled-2Fo7lr {
     background-color: rgba(149, 168, 176, .04);
     border: 1px solid rgba(149, 168, 176, .08);
     transition: background-color .4s;
 }
 
-.item-2idW98 {
+.item-1TA5qI {
     color: #D0DFFF;
     border-radius: 10px;
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: rgba(149, 168, 176, .1);
 }
 
-.item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     color: #e2e2e2;
 }
 
-.itemFilled-1cPbtg[aria-checked=true] {
+.itemFilled-2Fo7lr[aria-checked=true] {
     background-color: #4B5569 !important;
 }
 
-.item-2idW98[aria-checked=true] {
+.item-1TA5qI[aria-checked=true] {
     color: white !important;
 }
 
-.container-2nx-BQ {
+.container-1QtPKm {
     background-color: rgba(149, 168, 176, .5) !important;
 }
 
-.container-2nx-BQ .slider-32CRPX rect {
+.container-1QtPKm .slider-HJFN2i rect {
     fill: white;
 }
 
-.container-2nx-BQ .slider-32CRPX path {
+.container-1QtPKm .slider-HJFN2i path {
     fill: white;
 }
 
-.container-2nx-BQ:not([style*="218"]) {
+.container-1QtPKm:not([style*="218"]) {
     background-color: #95A8B0 !important;
 }
 
-.container-2nx-BQ:not([style*="218"]) .slider-32CRPX rect {
+.container-1QtPKm:not([style*="218"]) .slider-HJFN2i rect {
     fill: white;
 }
 
-.container-2nx-BQ:not([style*="218"]) .slider-32CRPX path {
+.container-1QtPKm:not([style*="218"]) .slider-HJFN2i path {
     fill: white;
 }
 
@@ -833,24 +834,24 @@
     border-radius: 10px;
 }
 
-.box-BHImcZ {
+.box-qwm0Q_ {
     border-radius: 2px;
 }
 
-.checkbox-f1HnKB {
+.checkbox-1LuCGM {
     border-width: 2px;
 }
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
     border-color: #95A8B0;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color:"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color:"] {
     border-color: transparent !important;
     background-color: #95A8B0 !important;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color:"] path {
+.theme-dark .checkbox-1LuCGM[style*="border-color:"] path {
     fill: white;
 }
 
@@ -900,19 +901,19 @@
     background-color: rgba(149, 168, 176, .2);
 }
 
-.markValue-2U_-UG {
+.markValue-21gAVC {
     color: #e2e2e2;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background: #e2e2e2;
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
     background: #4B5569;
 }
 
-.bar-1Bhnl9 {
+.bar-2H7Q9u {
     border-radius: 0;
 }
 
@@ -923,7 +924,7 @@
     box-shadow: none;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
     background: #95A8B0;
 }
 
@@ -1850,7 +1851,7 @@
     border-radius: 4px;
 }
 
-.search-2RHhW6 .input-2g-os5 {
+.search-2RHhW6 .input-3O04eu {
     box-shadow: none;
 }
 
@@ -2686,7 +2687,8 @@
     background: rgba(0, 0, 0, .3);
 }
 
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: rgba(0, 0, 0, .12);
     border-radius: 5px;
 }
@@ -2704,7 +2706,7 @@
     color: #D0DFFF;
 }
 
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background-color: transparent;
     border: none;
     box-shadow: none;
@@ -2908,7 +2910,7 @@
     background-color: #4B5569;
 }
 
-.theme-dark .searchBox-pyIJJj .input-2g-os5 {
+.theme-dark .searchBox-pyIJJj .input-3O04eu {
     box-shadow: none;
 }
 
@@ -3096,7 +3098,7 @@
     border: 2px solid rgba(0, 0, 0, .2);
 }
 
-.addFriendInputWrapper-kkoSV9 .input-2g-os5 {
+.addFriendInputWrapper-kkoSV9 .input-3O04eu {
     box-shadow: none;
     background-color: transparent;
 }
@@ -3828,7 +3830,7 @@
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -3937,17 +3939,17 @@
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -3975,7 +3977,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
