--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 3.9
+ * @version 4
  */
 
  #app-mount .app-2CXKsg {
@@ -164,12 +164,12 @@
   color: white;
 }
 
-.option-2eIyOn.focused-ODgjnC {
+.option-Uc12mm.focused-10mbp- {
   color: white; 
   background-color:#9b2742;
 }
 
-.item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
   background-color: transparent;
   border: 2px solid #9b2742;
   color: white;
@@ -231,18 +231,18 @@
   color: white;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
   border-radius: 6px;
   color: white;
   background-color: rgba(0, 0, 0, .26);
   border: none;
 }
 
-.input-2g-os5:hover {
+.input-3O04eu:hover {
   background-color: rgba(0, 0, 0, .46);
 }
 
-.input-2g-os5.focused-1AtTHC, .input-2g-os5:focus {
+.input-3O04eu.focused-16iuXg, .input-3O04eu:focus {
   border: 1px solid #9b2742;
   background-color: rgba(0, 0, 0, .76);
 }
@@ -261,8 +261,8 @@
   opacity: .4 !important;
 }
 
-.h5-2RwDNl,
-.description-30xx7u, .labelDescriptor-34wZ-z,
+.h5-2feg8J,
+.description-foE_WP, .labelDescriptor-2top7R,
 .colorHeaderPrimary-jN_yGr {
   color: white;
 }
@@ -291,39 +291,39 @@
   border-radius: 6px;
 }
 
-.theme-dark .popout-1KHNAq {
+.theme-dark .popout-15UxD6 {
   background-color: #101010;
   box-shadow: none;
   color: white;
   border-color: #9b2742;
 }
 
-.option-2eIyOn[aria-selected=true]:not(.option-2eIyOn.multi-1HXDiv),
-.theme-dark .option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true]:not(.option-Uc12mm.multi-2vPqc4),
+.theme-dark .option-Uc12mm[aria-selected=true] {
   background-color: #9b2742;
   color: white;
 }
 
-.option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm:focus, .option-Uc12mm:hover {
   background-color: rgba(155, 39, 66, .5);
   color: white;
 }
 
-.option-2eIyOn {
+.option-Uc12mm {
   color: white;
 }
 
 /* Regular Deactivated */
-.container-2nx-BQ {
+.container-1QtPKm {
 	border-radius: 5px;
 	background-color: rgba(0, 0, 0, .56) !important;
 }
 
-.container-2nx-BQ rect {
+.container-1QtPKm rect {
 	fill: #9b2742;
 	rx: 5;
 }
-.container-2nx-BQ path {
+.container-1QtPKm path {
 	fill: white;
 }
 /* Regular Deactivated */
@@ -348,16 +348,16 @@
 }
 
 
-.item-2idW98 {
+.item-1TA5qI {
   background: rgba(0, 0, 0, .46);
 }
 
-.item-2idW98[aria-checked=true] {
+.item-1TA5qI[aria-checked=true] {
   background: #9b2742 !important;
   border: none !important;
 }
 
-.cardPrimary-3qRT__, .item-2idW98 {
+.cardPrimary-3qRT__, .item-1TA5qI {
   border-color: #9b2742;
 }
 
@@ -366,7 +366,7 @@
   background-color: #ad3950 !important;
 }
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
   border-color: #939393;
 }
 
@@ -457,7 +457,7 @@
    background-color: #023202 !important;
 }
 
-.divider-_0um2u, .guildsSection-3E1u96, .featureBorder-2G0c_P {
+.divider-3nqZNm, .guildsSection-3E1u96, .featureBorder-2G0c_P {
   border: none;
 }
 
@@ -677,22 +677,22 @@
   background-color: rgba(0, 0, 0, .46);
 }
 
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
   color: #870b0b;
   width: 23px;
   height: 23px;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
   background-color: #101010;
   border-color: #9b2742;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD:focus {
+.lookFilled-GPyucw.select-Zz0IcO:focus {
   border-color: #9b2742;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD:hover.open-1FRZsK, .theme-dark .lookFilled-1GseHa.open-1FRZsK {
+.lookFilled-GPyucw.select-Zz0IcO:hover.open-LeyjhI, .theme-dark .lookFilled-GPyucw.open-LeyjhI {
   border-color: #9b2742 #9b2742 rgba(0,0,0,.3);
 }
 
@@ -705,11 +705,11 @@
   color: white !important;
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
   background: black;
 }
 
-.theme-dark .bar-1Bhnl9[style*="background"] {
+.theme-dark .bar-2H7Q9u[style*="background"] {
   background: black !important;
 }
 
@@ -720,11 +720,11 @@
   box-shadow: none;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
   background: #ad3950;
 }
 
-.barFill-2Bh7CX[style*="background"] {
+.barFill-3RgCsY[style*="background"] {
   background: #9b2742 !important;
 }
 
@@ -737,7 +737,7 @@
   background-color: transparent;
 }
 
-.bar-1Bhnl9 {
+.bar-2H7Q9u {
   border-radius: 0;
 }
 
@@ -755,7 +755,7 @@
 }
 
 #app-mount .lastPlayed-3aHvxk, #app-mount .overlayStatusText-AHDYB3, #app-mount .gameName-Uw4dbt,
-.markup-eYLPri, .cozy-VmLDNB .header-2jRmjb, .theme-dark .markValue-2U_-UG,
+.markup-eYLPri, .cozy-VmLDNB .header-2jRmjb, .theme-dark .markValue-21gAVC,
 .theme-dark .content-8biNdB ol, .theme-dark .content-8biNdB p, .theme-dark .content-8biNdB ul li, .theme-dark .content-8biNdB ul li:before {
   color: white;
 }
@@ -799,7 +799,7 @@
   top: 5px;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
   background: none;
 }
 
@@ -2480,7 +2480,8 @@
 .bda-slist .bda-footer a, .markup-eYLPri a, .welcomeMessage-ULm0mo a, .theme-dark .filenameLinkWrapper-3Rc6sk, .theme-dark .filenameLinkWrapper-3Rc6sk a,
 .topic-11NuQZ a, .emptyStateCTA-206J-N a, .helpText-h3r3wC a, .colorStandard-21JIj7 a,
 .editChannelButton-1dYN-G, .fakeLink-1wGafz, .button-1kija8,
-.footerText-2QLGHU a {
+.footerText-2QLGHU a,
+.mutedChannelsHook-3uTdkn {
   color: lightgreen;
 }
 
@@ -3041,7 +3042,8 @@
   color: white;
 }
 /* Active Post Boxes */
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
   background-color: rgba(155, 39, 66, .4);
   border: 2px solid transparent;
   border-radius: 5px;
@@ -3065,7 +3067,7 @@
   box-shadow: none;
 }
 /* Getting rid of the input background */
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
   background-color: transparent;
 }
 /* Tag Holder */
@@ -4142,7 +4144,7 @@ border-top-color: #9b2742;
   color: white;
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
   background-color: rgba(0, 0, 0, .4);
 }
 
@@ -4201,7 +4203,7 @@ border-top-color: #9b2742;
   color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
  border-radius: 5px 5px 0 0;
  border: 2px solid rgba(255,255,255,.2);
 }
@@ -4318,17 +4320,17 @@ border-top-color: #9b2742;
   color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
   background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
   background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
   background-color: transparent;
 }
 
@@ -4356,7 +4358,7 @@ border-top-color: #9b2742;
   background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
   background-color: transparent;
   border: none;
 }
