--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 3.9
+ * @version 4
 */
 
 @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -170,8 +170,8 @@ textarea,
     box-shadow: none;
 }
 
-.theme-dark .description-30xx7u,
-.theme-dark .labelDescriptor-34wZ-z,
+.theme-dark .description-foE_WP,
+.theme-dark .labelDescriptor-2top7R,
 .theme-dark .guildName-1kreI8,
 .theme-dark .override-1sK4r0,
 .theme-dark .overrideHighlight-3f-yyO {
@@ -186,7 +186,7 @@ textarea,
     color: white;
 }
 
-.theme-dark .divider-_0um2u {
+.theme-dark .divider-3nqZNm {
     border: none;
 }
 
@@ -224,7 +224,7 @@ textarea,
     box-shadow: none;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     color: white;
     background-color: rgba(0, 0, 0, 0.23);
 }
@@ -234,7 +234,7 @@ textarea,
 }
 
 .theme-dark .colorMuted-20987_,
-.theme-dark .input-2g-os5,
+.theme-dark .input-3O04eu,
 .search-25t1e9 .searchBox-31Zv9h .searchBoxInput-3h4etz,
 .search-25t1e9 .searchBox-31Zv9h .closeIcon-BMGxx0,
 .search-25t1e9 .searchBox-31Zv9h .searchIcon-3X4BYL {
@@ -259,12 +259,12 @@ textarea,
     background-color: rgba(0, 0, 0, 0.311);
 }
 
-.theme-dark .item-2idW98:hover {
+.theme-dark .item-1TA5qI:hover {
     background: rgba(0, 140, 153, 0.26);
     border-color: #008c99;
 }
 
-.item-2idW98 {
+.item-1TA5qI {
     border-radius: 9px;
 }
 
@@ -285,7 +285,7 @@ textarea,
     border-radius: 9px;
 }
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
     border-color: transparent !important;
     background-color: rgba(0, 0, 0, 0.45) !important;
 }
@@ -299,7 +299,7 @@ textarea,
     fill: white;
 }
 
-.item-2idW98[aria-checked="true"] {
+.item-1TA5qI[aria-checked="true"] {
     background: #008c99 !important;
     border-color: black !important;
 }
@@ -315,7 +315,7 @@ textarea,
 
 /* Regular Switch Deactivated */
 
-.container-2nx-BQ {
+.container-1QtPKm {
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.25) !important;
 }
@@ -325,7 +325,7 @@ textarea,
     background-color: rgba(0, 0, 0, 0.25);
 }
 
-.container-2nx-BQ rect {
+.container-1QtPKm rect {
     fill: red;
     rx: 5;
 }
@@ -335,7 +335,7 @@ textarea,
     rx: 5;
 }
 
-.container-2nx-BQ path {
+.container-1QtPKm path {
     fill: white;
 }
 
@@ -347,7 +347,7 @@ textarea,
 
 /* Regular Switch Activated */
 
-.container-2nx-BQ:not([style*="218"]) {
+.container-1QtPKm:not([style*="218"]) {
     background-color: #008c99 !important;
 }
 
@@ -355,7 +355,7 @@ textarea,
     background-color: #008c99;
 }
 
-.container-2nx-BQ:not([style*="218"]) rect {
+.container-1QtPKm:not([style*="218"]) rect {
     fill: #11df3d;
     rx: 5;
 }
@@ -364,7 +364,7 @@ textarea,
     fill: #11df3d;
 }
 
-.container-2nx-BQ:not([style*="218"]) path {
+.container-1QtPKm:not([style*="218"]) path {
     fill: white;
 }
 
@@ -378,7 +378,7 @@ textarea,
     top: -6px !important;
 }
 
-.theme-dark .h5-2RwDNl {
+.theme-dark .h5-2feg8J {
     color: white;
 }
 
@@ -502,11 +502,11 @@ textarea,
     border-radius: 12px;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
     background: #008c99;
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
     background: #2e2e2e;
 }
 
@@ -1506,7 +1506,7 @@ textarea,
     background-color: rgba(0, 140, 153, 0.7);
 }
 
-.theme-dark .inputPrefix-1VU7MB {
+.theme-dark .inputPrefix-3Nqilo {
     color: white;
     opacity: 1;
 }
@@ -1592,7 +1592,7 @@ textarea,
 }
 
 .cardPrimary-3qRT__,
-.item-2idW98 {
+.item-1TA5qI {
     background-color: black;
     border: 2px solid rgba(0, 0, 0, 0.33);
 }
@@ -1708,48 +1708,48 @@ textarea,
     background-color: transparent;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD,
+.lookFilled-GPyucw.select-Zz0IcO,
 .detailsBlock-24pLFz {
     background-color: rgba(0, 0, 0, 0.3);
     border-color: rgba(0, 0, 0, 0.78);
 }
 
-.lookFilled-1GseHa.select-1Ia3hD:hover.open-1FRZsK,
-.theme-dark .lookFilled-1GseHa.open-1FRZsK {
+.lookFilled-GPyucw.select-Zz0IcO:hover.open-LeyjhI,
+.theme-dark .lookFilled-GPyucw.open-LeyjhI {
     border-color: black;
 }
 
-.theme-dark .select-1Ia3hD,
-.option-2eIyOn,
+.theme-dark .select-Zz0IcO,
+.option-Uc12mm,
 .billingInformation-1MZXzx {
     color: white;
 }
 
-.option-2eIyOn:focus,
-.option-2eIyOn:hover {
+.option-Uc12mm:focus,
+.option-Uc12mm:hover {
     background-color: rgba(0, 0, 0, 0.1);
     color: white;
 }
 
-.option-2eIyOn[aria-selected="true"] {
+.option-Uc12mm[aria-selected="true"] {
     color: white;
     background-color: #11646b;
 }
 
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: #11646b;
 }
 
-.theme-dark .popout-1KHNAq {
+.theme-dark .popout-15UxD6 {
     border-color: transparent;
     background: #008c99;
 }
 
-.theme-dark .bar-1Bhnl9[style*="background: rgb(105, 196, 154);"] {
+.theme-dark .bar-2H7Q9u[style*="background: rgb(105, 196, 154);"] {
     background: #3f3f3f !important;
 }
 
-.barFill-2Bh7CX[style*="background: rgb(251, 184, 72);"] {
+.barFill-3RgCsY[style*="background: rgb(251, 184, 72);"] {
     background: #008c99 !important;
 }
 
@@ -1788,7 +1788,7 @@ textarea,
 
 .theme-dark .nowPlaying-3UpuKc .gameName-zbZetm,
 .emptyUsers--hiToV .colorStandard-21JIj7,
-.theme-dark .markValue-2U_-UG,
+.theme-dark .markValue-21gAVC,
 .theme-dark .content-FDHp32 ol,
 .theme-dark .content-FDHp32 p,
 .theme-dark .content-FDHp32 ul li,
@@ -1809,7 +1809,7 @@ textarea,
     background-color: #008c99;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background: white;
 }
 
@@ -2081,6 +2081,7 @@ textarea,
 .footer-1Ip3Sd a,
 .lookLink-15mFoz.colorLink-1Md3RZ,
 .theme-dark .markup-eYLPri a,
+.mutedChannelsHook-3uTdkn,
 .quickswitcher-pKcM9U a,
 .theme-dark .topic-11NuQZ a,
 .filenameLinkWrapper-3Rc6sk a,
@@ -2466,7 +2467,8 @@ textarea,
 }
 
 /* Active Post Boxes */
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: rgba(0, 140, 153, .2);
     border: 1px solid transparent;
     border-radius: 5px;
@@ -2495,7 +2497,7 @@ textarea,
 }
 
 /* Getting rid of the input background */
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background-color: transparent;
 }
 
@@ -3648,11 +3650,11 @@ textarea,
     color: white;
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: rgba(0, 0, 0, .4);
 }
 
-.item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     color: silver;
 }
 
@@ -3711,7 +3713,7 @@ textarea,
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -3832,17 +3834,17 @@ textarea,
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -3870,7 +3872,7 @@ textarea,
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
