--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 1.6
+ * @version 1.7
 */
 
 /* Ram Main Picture */
@@ -68,9 +68,9 @@
     color: white !important;
 }
 
-.h5-2RwDNl, 
-.label-2bTGzo, 
-.legend-1TXTJO {
+.h5-2feg8J, 
+.label-7akf7-, 
+.legend-3BgtI3 {
     color: white;
 }
 
@@ -84,13 +84,13 @@
     --button--underline-color: transparent;
 }
 
-.description-30xx7u, 
-.labelDescriptor-34wZ-z {
+.description-foE_WP, 
+.labelDescriptor-2top7R {
     color: white;
 }
 
-.description-30xx7u a, 
-.labelDescriptor-34wZ-z a {
+.description-foE_WP a, 
+.labelDescriptor-2top7R a {
     color: #f3acc5;
     text-shadow: 0 2px 0 black, 0 2px 0 black, 
     0 2px 0 black, 0 2px 0 black, 0 2px 0 black;
@@ -100,7 +100,7 @@
     text-decoration: none;
 }
 
-.divider-_0um2u {
+.divider-3nqZNm {
     border-top: none;
 }
 
@@ -122,7 +122,7 @@
     background-color: transparent;
 }
 
-.theme-dark .inputPrefix-1VU7MB {
+.theme-dark .inputPrefix-3Nqilo {
     opacity: 1;
     color: white;
 }
@@ -131,15 +131,15 @@
     opacity: 0;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     font-size: 14px;
     color: white;
     background-color: rgba(0,0,0,.2);
     border: 2px solid transparent;
 }
 
-.input-2g-os5.focused-1AtTHC, 
-.input-2g-os5:focus {
+.input-3O04eu.focused-16iuXg, 
+.input-3O04eu:focus {
     border-color: #f3acc5;
 }
 
@@ -480,81 +480,81 @@
     font-weight: 600;
 }
 
-.select-1Ia3hD {
+.select-Zz0IcO {
     border: 1px solid transparent;
 }
 
-.select-1Ia3hD, 
-.wrapper-1b33hy {
+.select-Zz0IcO, 
+.wrapper-mJT04A {
     color: white;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: #1c1c1c;
     border-color: #f3acc5;
 }
 
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: 1px solid #f3acc5;
     background: #1c1c1c;
 }
 
 
-.option-2eIyOn {
+.option-Uc12mm {
     color: white;
 }
 
 
-.option-2eIyOn.focused-ODgjnC, 
-.option-2eIyOn:focus, 
-.option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, 
+.option-Uc12mm:focus, 
+.option-Uc12mm:hover {
     background-color: rgba(255, 255, 255, .1);
     color: white;
 }
 
 
-.option-2eIyOn[aria-selected=true]:not(.option-2eIyOn.multi-1HXDiv) {
+.option-Uc12mm[aria-selected=true]:not(.option-Uc12mm.multi-2vPqc4) {
     color: white !important;
     background-color: #f3acc5 !important;
 }
 
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: black;
 }
 
-.itemFilled-1cPbtg {
+.itemFilled-2Fo7lr {
     background-color: rgba(255, 255, 255, .05);
 }
 
-.item-2idW98 {
+.item-1TA5qI {
     color: silver;
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: rgba(255, 255, 255, .1);
 }
 
-.item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     color: silver;
 }
 
-.itemFilled-1cPbtg[aria-checked=true] {
+.itemFilled-2Fo7lr[aria-checked=true] {
     background-color: #f3acc5 !important;
 }
 
-.item-2idW98[aria-checked=true] {
+.item-1TA5qI[aria-checked=true] {
     color: white !important;
 }
 
-.container-2nx-BQ:not([style*="218"]) {
+.container-1QtPKm:not([style*="218"]) {
     background-color: #f3acc5 !important;
 }
 
-.container-2nx-BQ:not([style*="218"]) .slider-32CRPX rect {
+.container-1QtPKm:not([style*="218"]) .slider-HJFN2i rect {
     fill: white;
 }
 
-.container-2nx-BQ:not([style*="218"]) .slider-32CRPX path {
+.container-1QtPKm:not([style*="218"]) .slider-HJFN2i path {
     fill: #72767D;
 }
 
@@ -743,19 +743,19 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.markValue-2U_-UG {
+.markValue-21gAVC {
     color: white;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background: white;
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
     background: transparent;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
     background: #f3acc5;
 }
 
@@ -1229,7 +1229,8 @@
     background: rgba(0, 0, 0, .2);
 }
 
-.markup-eYLPri a {
+.markup-eYLPri a,
+.mutedChannelsHook-3uTdkn {
     color: #f3acc5;
     text-shadow: 0 2px 0 black, 0 2px 0 black, 
     0 2px 0 black, 0 2px 0 black, 0 2px 0 black;
@@ -1541,7 +1542,7 @@
     border-color: #f3acc5;
 }
 
-.addFriendInputWrapper-kkoSV9 .input-2g-os5 {
+.addFriendInputWrapper-kkoSV9 .input-3O04eu {
     background-color: transparent;
     border: none;
 }
@@ -1580,24 +1581,24 @@
     opacity: .8;
 }
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
     border-color: white;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color:"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color:"] {
     border-color: transparent !important;
     background-color: #f3acc5 !important;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color:"] path {
+.theme-dark .checkbox-1LuCGM[style*="border-color:"] path {
     fill: white;
 }
 
-.checkbox-f1HnKB {
+.checkbox-1LuCGM {
     border-width: 2px;
 }
 
-.box-BHImcZ {
+.box-qwm0Q_ {
     border-radius: 4px;
 }
 
@@ -2795,12 +2796,13 @@
     background-color: transparent;
 }
 
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: rgba(0, 0, 0, .3);
     border-radius: 4px;
 }
 
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background-color: transparent;
     border: none;
 }
@@ -3604,7 +3606,7 @@
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -3713,17 +3715,17 @@
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -3751,7 +3753,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
