--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 3.9
+ * @version 4
  */
 
 /* Main Background */
@@ -165,7 +165,7 @@
     background-color: rgba(0,0,0,.6);
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ, .description-30xx7u a {
+.lookLink-15mFoz.colorLink-1Md3RZ, .description-foE_WP a {
     color: #912;
     font-weight: bold;
     text-shadow: rgb(77, 2, 2) 0px 0px 4px,rgb(107, 0, 0) 0px 0px 4px;
@@ -376,21 +376,21 @@
     color: white;
 }
 
-.description-30xx7u, .labelDescriptor-34wZ-z {
+.description-foE_WP, .labelDescriptor-2top7R {
     color: white;
 }
 
-.description-30xx7u {
+.description-foE_WP {
     font-size: 14px;
     font-weight: 200;
 }
 
-.h5-2RwDNl {
+.h5-2feg8J {
     color: white;
     font-size: 13px;
 }
 
-.h4-1_f8j1, .h5-2RwDNl {
+.h4-1_f8j1, .h5-2feg8J {
     font-weight: 600;
     text-transform: capitalize;
 }
@@ -550,35 +550,35 @@
 .detailsBlock-24pLFz {
     background-color: rgba(0,0,0,.3);
 }
-.select-1Ia3hD {
+.select-Zz0IcO {
     border-radius: 8px;
     border: none;
 }
-.open-1FRZsK {
+.open-LeyjhI {
     border-radius: 8px 8px 0 0;
 }
-.select-1Ia3hD, .wrapper-1b33hy {
+.select-Zz0IcO, .wrapper-mJT04A {
     color: white;
 }
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: rgba(0,0,0,.6);
     border-color: transparent;
 }
-.option-2eIyOn {
+.option-Uc12mm {
     color: white;
 }
-.option-2eIyOn.focused-ODgjnC, .option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, .option-Uc12mm:focus, .option-Uc12mm:hover {
     background-color: #C13;
     color: white;
 }
-.option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true] {
     color: white;
     background-color: #912;
 }
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: white;
 }
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: none;
     background: rgba(0,0,0,.6);
     border-radius: 0 0 8px 8px;
@@ -610,13 +610,13 @@
     background-color: rgba(0,0,0,.4);
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     color: white;
     background-color: rgba(0,0,0,.4);
     border: 1px solid transparent;
 }
 
-.input-2g-os5.focused-1AtTHC, .input-2g-os5:focus {
+.input-3O04eu.focused-16iuXg, .input-3O04eu:focus {
     border-color: #912;
 }
 
@@ -663,20 +663,20 @@
     border-color: #912;
 }
 
-.item-2idW98 {
+.item-1TA5qI {
     color: white;
     border-radius: 7px;
 }
 
-.itemFilled-1cPbtg {
+.itemFilled-2Fo7lr {
     background-color: rgba(255,255,255,.2);
 }
 
-.item-2idW98[aria-checked=true], .item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.item-1TA5qI[aria-checked=true], .item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     color: white;
 }
 
-.itemFilled-1cPbtg[aria-checked=true] {
+.itemFilled-2Fo7lr[aria-checked=true] {
     background-color: transparent;
     background-image: -webkit-linear-gradient(
 56deg, #000000 24%, #991121 100%);
@@ -687,7 +687,7 @@
     border-radius: 7px;
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: rgba(0,0,0,.3);
 }
 
@@ -696,27 +696,27 @@
     r: 9;
 }
 
-.theme-dark .markValue-2U_-UG {
+.theme-dark .markValue-21gAVC {
     color: white;
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
     background: #912 !important;
 }
 
-.bar-1Bhnl9 {
+.bar-2H7Q9u {
     border-radius: 2px;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
     background: #C13 !important;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background:  white;
 }
 
-.markDash-yk2kJ- {
+.markDash-1ATsxA {
     width: 3px;
 }
 
@@ -738,7 +738,8 @@
     font-weight: 300;
 }
 
-.markup-eYLPri a {
+.markup-eYLPri a,
+.mutedChannelsHook-3uTdkn {
     color: red;
     font-weight: bold;
 }
@@ -747,24 +748,24 @@
     background-color: transparent;
 }
 
-.box-BHImcZ {
+.box-qwm0Q_ {
     border-radius: 6px;
 }
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
     border-color: white;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color"] {
     border-color: #C13 !important;
     background-color: #912 !important;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color"] path {
+.theme-dark .checkbox-1LuCGM[style*="border-color"] path {
     fill: white;
 }
 
-.checkbox-f1HnKB {
+.checkbox-1LuCGM {
     border-width: 2px;
 }
 
@@ -2312,19 +2313,19 @@
 }
 
 
-.container-2nx-BQ, .input-2XRLou, .bd-switch-body {
+.container-1QtPKm, .input-125oad, .bd-switch-body {
     border-radius: 6px;
 }
 
-.slider-32CRPX rect, .bd-switch-body .bd-switch-slider rect {
+.slider-HJFN2i rect, .bd-switch-body .bd-switch-slider rect {
     rx: 5;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(218, calc(var(--saturation-factor, 1) * 4.6%), 46.9%);"], .bd-switch-body {
+.container-1QtPKm[style*="background-color: hsl(218, calc(var(--saturation-factor, 1) * 4.6%), 46.9%);"], .bd-switch-body {
     background-color: #e20707 !important;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"], .bd-switch input:checked+.bd-switch-body {
+.container-1QtPKm[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"], .bd-switch input:checked+.bd-switch-body {
     background-color: #188b01 !important;
 }
 
@@ -2438,7 +2439,8 @@
     border: 2px solid black;
 }
 /* Active Post Boxes */
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: rgba(153, 17, 34, .4);
     border: 2px solid transparent;
     border-radius: 4px;
@@ -2456,7 +2458,7 @@
     box-shadow: none;
 }
 /* Getting rid of the input background */
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background-color: transparent;
     border: none;
 }
@@ -3640,7 +3642,7 @@
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -3761,17 +3763,17 @@
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -3799,7 +3801,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
