--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 3.9
+ * @version 4
  */
 
 /* Main Background */
@@ -142,11 +142,11 @@
     border-radius: 6px;
 }
 
-.description-30xx7u, .labelDescriptor-34wZ-z {
+.description-foE_WP, .labelDescriptor-2top7R {
     color: white;
 }
 
-.h5-2RwDNl {
+.h5-2feg8J {
     color: white;
     text-transform: capitalize;
     font-size: 15px;
@@ -347,7 +347,7 @@
     line-height: unset;
 }
 
-.description-30xx7u a {
+.description-foE_WP a {
     color: #F44;
     font-weight: bold;
 }
@@ -371,31 +371,31 @@
     border-radius: 7px;
 }
 
-.itemFilled-1cPbtg {
+.itemFilled-2Fo7lr {
     background-color: rgba(0,0,0,.4);
 }
 
-.item-2idW98 {
+.item-1TA5qI {
     color: white;
     border-radius: 8px;
 }
 
-.item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r),
-.item-2idW98:active:not([aria-checked=true]),
-.item-2idW98[aria-checked=true] {
+.item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_),
+.item-1TA5qI:active:not([aria-checked=true]),
+.item-1TA5qI[aria-checked=true] {
     color: white;
     text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: rgba(204, 102, 119, .6);
 }
 
-.itemFilled-1cPbtg:active:not([aria-checked=true]) {
+.itemFilled-2Fo7lr:active:not([aria-checked=true]) {
     background-color: rgba(204, 102, 119, .9);
 } 
 
-.itemFilled-1cPbtg[aria-checked=true] {
+.itemFilled-2Fo7lr[aria-checked=true] {
     background-color: #F44;
 }
 
@@ -486,11 +486,11 @@
     background-color: transparent;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     color: white;
 }
 
-.input-2g-os5.focused-1AtTHC, .input-2g-os5:focus {
+.input-3O04eu.focused-16iuXg, .input-3O04eu:focus {
     border-color: #F44;
 }
 
@@ -569,11 +569,11 @@
 ,transparent,transparent 1px,#F44 0,#F44 2px,transparent 0);
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
     background: #C67 !important;
 }
 
-.bar-1Bhnl9 {
+.bar-2H7Q9u {
     border-radius: 2px;
 }
 
@@ -584,15 +584,15 @@
     border: none;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
     background-color: #f44 !important;
 }
 
-.theme-dark .markValue-2U_-UG {
+.theme-dark .markValue-21gAVC {
     color: white;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background: white;
 }
 
@@ -601,7 +601,8 @@
     font-weight: bold;
 }
 
-.markup-eYLPri a {
+.markup-eYLPri a,
+.mutedChannelsHook-3uTdkn {
     color: #f44;
 }
 
@@ -614,43 +615,43 @@
     background-color: transparent;
 }
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
     border-color: transparent;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color"] {
     border-color: #f44 !important;
     border-width: 2px;
     background-color: rgba(255, 68, 68, .6) !important;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color"] path {
+.theme-dark .checkbox-1LuCGM[style*="border-color"] path {
     fill: white;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: rgba(0,0,0,.3);
     border-color: transparent;
 }
 
-.select-1Ia3hD, .wrapper-1b33hy {
+.select-Zz0IcO, .wrapper-mJT04A {
     color: white;
 }
 
-.popout-1KHNAq {
+.popout-15UxD6 {
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
 
-.option-2eIyOn, .selectedIcon-19TbzU {
+.option-Uc12mm, .selectedIcon-122rMx {
     color: white;
 }
 
-.option-2eIyOn.focused-ODgjnC, .option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, .option-Uc12mm:focus, .option-Uc12mm:hover {
     color: white;
     background-color: rgba(204, 102, 119, .6);
 }
 
-.option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true] {
     color: white;
     background-color: #F44;
     text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
@@ -851,35 +852,35 @@ background-color: transparent  !important;
 .detailsBlock-24pLFz {
     background-color: rgba(0,0,0,.3);
 }
-.select-1Ia3hD {
+.select-Zz0IcO {
     border-radius: 8px;
     border: none;
 }
-.open-1FRZsK {
+.open-LeyjhI {
     border-radius: 8px 8px 0 0;
 }
-.select-1Ia3hD, .wrapper-1b33hy {
+.select-Zz0IcO, .wrapper-mJT04A {
     color: white;
 }
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: rgba(0,0,0,.6);
     border-color: transparent;
 }
-.option-2eIyOn {
+.option-Uc12mm {
     color: white;
 }
-.option-2eIyOn.focused-ODgjnC, .option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, .option-Uc12mm:focus, .option-Uc12mm:hover {
     background-color: #C67;
     color: white;
 }
-.option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true] {
     color: white;
     background-color: #f44;
 }
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: white;
 }
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: none;
     background: rgba(0,0,0,.6);
     border-radius: 0 0 8px 8px;
@@ -2229,7 +2230,8 @@ background-color: transparent  !important;
     background-color: #f44;
 }
 
-.markup-eYLPri a {
+.markup-eYLPri a,
+.mutedChannelsHook-3uTdkn {
     font-weight: bold;
 }
 
@@ -2506,11 +2508,11 @@ background-color: transparent  !important;
 }
 
 
-.container-2nx-BQ, .input-2XRLou, .bd-switch-body {
+.container-1QtPKm, .input-125oad, .bd-switch-body {
     border-radius: 6px;
 }
 
-.slider-32CRPX rect {
+.slider-HJFN2i rect {
     rx: 5;
 }
 
@@ -2518,11 +2520,11 @@ background-color: transparent  !important;
     rx: 5;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(218, calc(var(--saturation-factor, 1) * 4.6%), 46.9%);"], .bd-switch-body {
+.container-1QtPKm[style*="background-color: hsl(218, calc(var(--saturation-factor, 1) * 4.6%), 46.9%);"], .bd-switch-body {
     background-color: #D00 !important;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"], .bd-switch input:checked+.bd-switch-body {
+.container-1QtPKm[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"], .bd-switch input:checked+.bd-switch-body {
     background-color: #180 !important;
 }
 
@@ -2602,7 +2604,7 @@ background-color: transparent  !important;
     height: 450px;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     background-color: transparent;
 }
 
@@ -2636,7 +2638,8 @@ background-color: transparent  !important;
     color: gold;
 }
 /* Active Post Boxes */
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: rgba(255, 68, 68, .5);
     border: 2px solid transparent;
     border-radius: 5px;
@@ -2656,7 +2659,7 @@ background-color: transparent  !important;
     box-shadow: none;
 }
 /* Getting rid of the input background */
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background-color: transparent;
 }
 /* Tag Holder */
@@ -3843,7 +3846,7 @@ border-top-color: #f44;
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -3964,17 +3967,17 @@ border-top-color: #f44;
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -4002,7 +4005,7 @@ border-top-color: #f44;
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
