--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 3.9
+ * @version 4
  */
 
  .app-2CXKsg {
@@ -461,7 +461,8 @@
     color: white !important;
 }
 
-.markup-eYLPri a {
+.markup-eYLPri a,
+.mutedChannelsHook-3uTdkn {
     color: #94CEE6;
 }
 
@@ -699,18 +700,18 @@
     box-shadow: rgba(97, 165, 216, .8) 2px 2px 2px 0px, rgba(97, 165, 216, .8) 2px 2px 2px 0px;
 }
 
-.h5-2RwDNl {
+.h5-2feg8J {
     color: white;
 }
 
-.input-2g-os5 {
+.input-3O04eu {
     border-radius: 5px;
     color: white;
     background-color: rgba(0,0,0,.25);
     border: 1px solid transparent;
 }
 
-.input-2g-os5.focused-1AtTHC, .input-2g-os5:focus {
+.input-3O04eu.focused-16iuXg, .input-3O04eu:focus {
     border-color: #61A5D8;
     background-color: rgba(0,0,0,.45);
 }
@@ -869,35 +870,35 @@
     border: 2px solid black;
 }
 
-.lookFilled-1GseHa.select-1Ia3hD {
+.lookFilled-GPyucw.select-Zz0IcO {
     background-color: rgba(0,0,0,.25);
     border-color: transparent;
 }
 
-.select-1Ia3hD, .wrapper-1b33hy {
+.select-Zz0IcO, .wrapper-mJT04A {
     color: white;
     font-weight: 300;
 }
 
-.popout-1KHNAq {
+.popout-15UxD6 {
     border: none;
     background: rgba(0,0,0,.75);
 }
 
-.selectedIcon-19TbzU {
+.selectedIcon-122rMx {
     color: white;
 }
 
-.option-2eIyOn[aria-selected=true] {
+.option-Uc12mm[aria-selected=true] {
     background-color: #61A5D8 !important;
 }
 
-.option-2eIyOn {
+.option-Uc12mm {
     color: white !important;
     font-weight: 300;
 }
 
-.option-2eIyOn.focused-ODgjnC, .option-2eIyOn:focus, .option-2eIyOn:hover {
+.option-Uc12mm.focused-10mbp-, .option-Uc12mm:focus, .option-Uc12mm:hover {
     background-color: #76AAD9;
 }
 
@@ -937,16 +938,16 @@
 }
 
 
-.theme-dark .checkbox-f1HnKB {
+.theme-dark .checkbox-1LuCGM {
     border-color: white;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color; background-color"], .theme-dark .checkbox-f1HnKB[style*="border-color"] {
+.theme-dark .checkbox-1LuCGM[style*="border-color; background-color"], .theme-dark .checkbox-1LuCGM[style*="border-color"] {
     background-color: #76AAD9 !important;
     border: 2px outset #76AAD9 !important;
 }
 
-.theme-dark .checkbox-f1HnKB[style*="border-color; background-color"] path, .theme-dark .checkbox-f1HnKB[style*="border-color"] path {
+.theme-dark .checkbox-1LuCGM[style*="border-color; background-color"] path, .theme-dark .checkbox-1LuCGM[style*="border-color"] path {
     fill: white;
 }
 
@@ -1368,11 +1369,11 @@
     box-shadow: none;
 }
 
-.barFill-2Bh7CX {
+.barFill-3RgCsY {
     background: #76AAD9 !important;
 }
 
-.theme-dark .bar-1Bhnl9 {
+.theme-dark .bar-2H7Q9u {
     background: #61A5D8 !important;
 }
 
@@ -1515,59 +1516,59 @@
 }
 
 
-.container-2nx-BQ, .input-2XRLou, .bd-switch-body {
+.container-1QtPKm, .input-125oad, .bd-switch-body {
     border-radius: 4px !important;
 }
 
-.container-2nx-BQ, .bd-switch-body {
+.container-1QtPKm, .bd-switch-body {
     background-color: #B02121 !important;
 }
 
-.container-2nx-BQ .slider-32CRPX rect, .bd-switch-body .bd-switch-slider rect {
+.container-1QtPKm .slider-HJFN2i rect, .bd-switch-body .bd-switch-slider rect {
     fill: red;
     rx: 3;
 }
 
-.container-2nx-BQ .slider-32CRPX path, .bd-switch-body .bd-switch-slider path {
+.container-1QtPKm .slider-HJFN2i path, .bd-switch-body .bd-switch-slider path {
     fill: white; 
 }
 
-.container-2nx-BQ[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%)"], .bd-switch input:checked+.bd-switch-body {
+.container-1QtPKm[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%)"], .bd-switch input:checked+.bd-switch-body {
     background-color: #137e25 !important;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%)"] .slider-32CRPX rect, .bd-switch input:checked+.bd-switch-body.bd-switch-body .bd-switch-slider rect  {
+.container-1QtPKm[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%)"] .slider-HJFN2i rect, .bd-switch input:checked+.bd-switch-body.bd-switch-body .bd-switch-slider rect  {
     fill: #0bc90b;
     rx: 3;
 }
 
-.container-2nx-BQ[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%)"] .slider-32CRPX path, .bd-switch input:checked+.bd-switch-body.bd-switch-body .bd-switch-slider path  {
+.container-1QtPKm[style*="background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%)"] .slider-HJFN2i path, .bd-switch input:checked+.bd-switch-body.bd-switch-body .bd-switch-slider path  {
     fill: white; 
 }
 
-.description-30xx7u, .labelDescriptor-34wZ-z, .item-2idW98:hover:not([aria-checked=true]):not(.disabled-3tqE8r), .item-2idW98[aria-checked=true] {
+.description-foE_WP, .labelDescriptor-2top7R, .item-1TA5qI:hover:not([aria-checked=true]):not(.disabled-WBmOu_), .item-1TA5qI[aria-checked=true] {
     color: white;
 }
 
-.description-30xx7u a, .helpText-10IgPC a {
+.description-foE_WP a, .helpText-10IgPC a {
     color: #94CEE6;
 }
 
-.item-2idW98 {
+.item-1TA5qI {
     color: white;
     border-radius: 6px;
 }
 
-.itemFilled-1cPbtg {
+.itemFilled-2Fo7lr {
     background-color: rgba(0, 0, 0, 0.28);
 }
 
-.itemFilled-1cPbtg:hover:not([aria-checked=true]):not(.disabled-3tqE8r) {
+.itemFilled-2Fo7lr:hover:not([aria-checked=true]):not(.disabled-WBmOu_) {
     background-color: rgba(0, 0, 0, 0.48);
     border: 2px outset #76AAD9;
 }
 
-.itemFilled-1cPbtg[aria-checked=true] {
+.itemFilled-2Fo7lr[aria-checked=true] {
     background-color: rgba(0, 0, 0, 0.48);
     border: 2px inset #61A5D8;
 }
@@ -1576,7 +1577,7 @@
     color: #00aeff;
 }
 
-.itemFilled-1cPbtg .radioBar-3w9XY- svg path {
+.itemFilled-2Fo7lr .radioBar-3w9XY- svg path {
     fill-rule: unset;
     clip-rule: unset;
 }
@@ -2100,11 +2101,11 @@
     background-color: transparent;
 }
 
-.theme-dark .markValue-2U_-UG {
+.theme-dark .markValue-21gAVC {
     color: white;
 }
 
-.theme-dark .markDash-yk2kJ- {
+.theme-dark .markDash-1ATsxA {
     background: white;
 }
 
@@ -2492,7 +2493,8 @@
     border: 2px solid black;
 }
 /* Active Post Boxes */
-.mainCard-3KBsBI {
+.mainCard-3KBsBI,
+.increasedActivityMainCard-2ry6hI {
     background-color: rgba(97, 165, 216, .4);
     border: 2px solid transparent;
     border-radius: 5px;
@@ -2512,7 +2514,7 @@
     box-shadow: none;
 }
 /* Getting rid of the input background */
-.mainCard-3KBsBI .input-2g-os5 {
+.mainCard-3KBsBI .input-3O04eu {
     background-color: transparent;
 }
 /* Tag Holder */
@@ -3554,7 +3556,7 @@
     color: white;
 }
 
-.popout-1KHNAq.popoutPositionTop-1GenHR.popout-1KHNAq {
+.popout-15UxD6.popoutPositionTop-3Uhefd.popout-15UxD6 {
    border-radius: 5px 5px 0 0;
    border: 2px solid rgba(255,255,255,.2);
 }
@@ -3662,17 +3664,17 @@
     color: #C5E384;
 }
 
-.card-2CLwV2,
-.howItWorksContainer-2zbci6,
-.avatarCard-1fqGQ0 {
+.card-ErWTld,
+.howItWorksContainer-3ZDRIG,
+.avatarCard-1N47yx {
     background-color: rgba(0, 0, 0, .45);
 }
 
-.earningsPreviewContainer-193qd3[style*="background-color:"] {
+.earningsPreviewContainer-2I6S8Z[style*="background-color:"] {
     background-color: rgba(0, 0, 0, .45) !important;
 }
 
-.howItWorksImageContainer-3ZJ-AE {
+.howItWorksImageContainer-3U9Rdq {
     background-color: transparent;
 }
 
@@ -3700,7 +3702,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.emojiButtonContainer-1n1BNw {
+.container-ZSFRqx {
     background-color: transparent;
     border: none;
 }
